--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,21 +20,14 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
-    <string name="menu_home">Home</string>
-    <string name="menu_gallery">Gallery</string>
-    <string name="menu_slideshow">Slideshow</string>
-
     <string name="home_second">Home Second</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="barter_trade">Barter Trade Fragment</string>
     <string name="on_sale">On Sale Fragment</string>
     <string name="account">Account</string>
     <string name="username">Username</string>
     <string name="logout">Logout</string>
     <string name="account_settings">Account Settings</string>
-    <string name="my_ads">My Ads</string>
+    <string name="my_items">My Items</string>
     <string name="shortlisted_ads">Shortlisted Ads</string>
     <string name="share">Share</string>
     <string name="rate_us">Rate Us</string>
@@ -82,4 +75,7 @@
     <string name="edit_profile_details">Edit Profile Details</string>
     <string name="submit">Submit</string>
     <string name="no_ads_running">There are no ads currently running…</string>
+    <string name="no_item">Looks like you haven\'t added any Item yet</string>
+    <string name="no_barter_items">Looks like currently there are no Barter trade items.</string>
+    <string name="no_sell_items">Looks like currently there are no items on Sale.</string>
 </resources>
